maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:5: error: not found: value random3
    al=random3()
       ^WallFollowerMaze:9: error: not found: value random3
        al=random3()}
           ^